# jira_workflow

./: .gitignore  .mcp.json  Claude_Code_Integration_Guide.md  QUICKSTART.md  agents.json  jira_mcp_server.py  process_jira_ticket.sh  用例模板.xlsx
.claude/: README.md
.claude/skills/jira-test-extractor/: SKILL.md  config.json.example  create_template.py  extract_test_cases.py  generate_docs.py  jira-workflow.bat  jira-workflow.spec  pyproject.toml  read_attachments.py  requirements.txt
.claude/skills/jira-test-extractor-cli/: SKILL.md
.claude/skills/jira-test-extractor/.github/workflows/: release.yml
.claude/skills/jira-test-extractor/src/: __init__.py  attachment_reader.py  cli.py  extractor.py  generator.py  template_parser.py
.claude/skills/jira-test-extractor/templates/: default_template.xlsx
.claude/skills/jira-test-extractor/tests/: test_cli.py
.github/workflows/: release.yml
